# bettermusic

./: index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/domain/: song_list.rs
src-tauri/src/domain/player/: player.rs
src-tauri/src/domain/song_list/: song_list.rs
src-tauri/src/frontend/: callable.rs  mod.rs  my_songs_play.rs  play_bar.rs
src-tauri/src/frontend/my_songs/: actions.rs
src-tauri/src/frontend/my_songs_play/: actions.rs
src-tauri/src/frontend/play_bar/: actions.rs
src-tauri/src/infra/: logger.rs  metadata.rs
src-tauri/src/infra/logger/: api.rs  logger.rs  parser.rs
src-tauri/src/infra/metadata/: metadata.rs
src-tauri/src/logger/: config.rs  mod.rs
src/components/Home/: ActivitySection.vue  DiscoverSection.vue  PlayerBar.vue  PlaylistSection.vue  Sidebar.vue  TopBar.vue
src/components/Icon/: SearchIcon.vue
src/router/: index.ts
src/styles/: global.css
src/types/: music.ts
src/utils/: asset.ts
src/views/: HomeView.vue  MySongsView.vue
