[package]
name = "bettermusic"
version = "0.1.0"
description = "A Tauri App"
authors = ["romi brooks"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bettermusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# For the new version of the tarui-build update, the url ref is: https://crates.io/crates/tauri-build/versions
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# For the new version of the tarui update, the url ref is: https://crates.io/crates/tauri/versions
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2"
simplelog = "0.12.2"
log = "0.4.29"
time = "0.3.46"
rodio = "0.22.2"
lazy_static = "1.4"
